<resources>
    <string name="app_name">News App Template 1</string>
    <string name="homepage_fragment">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="string_discover">Discover</string>
    <string name="news_from_all_over_the_world">News from all over the world</string>
    <string name="hint_search">Search</string>
    <string name="tenzing_sherpa">Tenzing Sherpa</string>
    <string name="tenzingsherpa">\@tenzingsherpa</string>
    <string name="settings">Settings</string>
    <string name="profile_link">https://gratisography.com/wp-content/uploads/2024/10/gratisography-cool-cat-800x525.jpg</string>
</resources>