<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clMainSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDiscover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="120dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/string_discover"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.056"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/news_from_all_over_the_world"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtDiscover"
                app:layout_constraintTop_toBottomOf="@id/txtDiscover" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtSearchText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/layout_circular_cornor_bg_search"
                android:drawableStart="@drawable/ic_search_edit"
                android:drawableEnd="@drawable/ic_tune_24"
                android:hint="@string/hint_search"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLSearchFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtSearchText"
                app:tabGravity="center"
                app:tabIndicatorColor="@color/black"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/black"
                app:tabTextAppearance="@style/TabLayoutTextAppearance"
                app:tabTextColor="@color/primary_gray" />


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vPagerSearchFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLSearchFragment" />


        </android.support.constraint.ConstraintLayout>

</androidx.core.widget.NestedScrollView>